deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lwid
  labels:
    app.kubernetes.io/name: lwid
