deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lwid-server
  namespace: lwid
  labels:
    app.kubernetes.io/name: lwid-server
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: lwid
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lwid-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lwid-server
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: lwid
    spec:
      containers:
        - name: server
          image: 81737r3y.gra7.container-registry.ovh.net/lwid/lwid-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /storage
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: lwid-storage
