deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lwid-server
  namespace: lwid
  labels:
    app.kubernetes.io/name: lwid-server
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: lwid
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lwid-server
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
