deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lwid
  namespace: lwid
  labels:
    app.kubernetes.io/name: lwid
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: lwid
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lookwhatidid.ovh
      secretName: lookwhatidid-ovh-tls
  rules:
    - host: lookwhatidid.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lwid-server
                port:
                  number: 8080
